(1-3)Eメール重複チェック処理の追加

--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -87,6 +87,11 @@
                       >
                         メールアドレスを入力してください
                       </label>
+                      <label
+                        th:text="${notUniqueMail}"
+                        class="error-messages"
+                      >
+                      </label>
                       <input
                         type="text"
                         name="mailAddress"
