(1-5)管理者登録時に再確認用パスワードを求める機能を追加

--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -129,6 +129,35 @@
                     </div>
                   </div>
                 </div>
+                <!-- 確認用パスワード -->
+                <div class="form-group">
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <label for="password-confirm"> パスワード（確認用）: </label>
+                      <label
+                        th:errors="*{password}"
+                        class="error-messages"
+                      >
+                        パスワードを入力してください
+                      </label>
+                      <label
+                        th:text="${notConfirmPassword}"
+                        class="error-messages"
+                      >
+                      </label>
+                      <input
+                        type="password"
+                        name="password-confirm"
+                        id="password-confirm"
+                        class="form-control"
+                        placeholder="password"
+                        th:field="*{passwordConfirm}"
+                        th:errorclass="error-input"
+                        value="xxxxxxxx"
+                      />
+                    </div>
+                  </div>
+                </div>
                 <!-- 登録ボタン -->
                 <div class="form-group">
                   <div class="row">
