--- a/src/main/resources/templates/error/5xx.html
+++ b/src/main/resources/templates/error/5xx.html
@@ -45,9 +45,9 @@
             <div class="form-group">
                 <div class="alert alert-danger">
                   <p>
-                    以下のいずれかの原因により、ページを正しく表示できませんでした。
-                    ・不正な操作、画面遷移
-                    ・ログインしてから一定時間の無操作
+                    以下のいずれかの原因により、ページを正しく表示できませんでした。<br>
+                    ・不正な操作、画面遷移<br>
+                    ・ログインしてから一定時間の無操作<br>
                     ・メンテナンス中のアクセス
                   </p>
                 </div>
