--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -65,6 +65,11 @@
                   >従業員管理</a
                 >
               </li>
+              <li>
+                <a href="insert.html" th:href="@{/employee/toInsert}"
+                  >従業員登録</a
+                >
+              </li>
             </ul>
             <p class="navbar-text navbar-right">
               <span th:text="${session.administratorName}">山田太郎</span
