--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -23,6 +23,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
   </head>
   <body>
     <div class="container">
@@ -111,7 +112,7 @@
               th:action="@{/employee/search}"
               th:object="${searchEmployeeForm}"
               >
-                <div class="form-group">
+                <div class="form-group ui-widget">
                   <input
                     type="text"
                     name="name"
@@ -165,6 +166,17 @@
     <!-- end container -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../../static/js/bootstrap.min.js"></script>
+    <script th:src="@{/js/bootstrap.min.js}" src="../../static/js/bootstrap.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script th:inline="javascript">
+      $(function() {
+        var availableTags = /*[[${nameList}]]*/"nameList";
+        $('#name').autocomplete({
+          source: availableTags
+        });
+      });
+    </script>
   </body>
 </html>
